Make footers solid & fix spacing issue

--- a/css/index.css
+++ b/css/index.css
@@ -29,16 +29,15 @@ footer {
     position: sticky;
     bottom: 0;
     width: 100%;
+    height: 48px;
     display: flex;
-    padding: 0.5em;
+    padding-bottom: 10px;
+    padding-top: 10px;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     text-align: center;
-    background: rgba(0, 50, 100, 0.9);
-    backdrop-filter: blur(16px);
-    border: solid 0 #0088FF;
-    border-top-width: 1px;
+    background: rgba(0, 30, 100, 1.0);
 }
 
 footer > p {
